# yomi

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: design.md
src/: blacklist.rs  config.rs  lib.rs  lock.rs  main.rs  model.rs  util.rs
src/archive/: compress.rs  incremental.rs  manifest.rs  mod.rs
src/catalog/: mod.rs  schema.sql
src/cli/: archive.rs  gc.rs  index.rs  mod.rs  read.rs  rescan.rs  search.rs  status.rs
src/gc/: live.rs  mod.rs  policy.rs  safety.rs
src/index/: ftsindex.rs  mod.rs  parse.rs  query.rs
src/rescan/: mod.rs
src/scan/: content.rs  mod.rs  quarantine.rs  redact.rs  rules.rs
src/source/: claude.rs  discover.rs  mod.rs  single.rs
tests/: e2e.rs
